Fixed scrollbar colors

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,7 @@ body::-webkit-scrollbar-thumb{
     border-radius: 50px;
 }
 body::-webkit-scrollbar-track{
-    background-color: $base-blue;
+    background-color: $side-bar-color;
 }
 
 body {
